--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,15 @@ body{
 	height:650px;
 	background-size:100%;
 }
+#animation{
+	position:relative;
+	animation-name:from-top;
+	animation-duration:2s;
+}
+@keyframes from-top{
+	0% {top:-100px;}
+	100% {top:0px;}
+}
 
 .page-2{
 	background-color:#000000;
@@ -92,12 +101,7 @@ body{
 	letter-spacing:6px;
 	font-size:50px;
 }
-.name2{
-	color:#ffffff;
-	letter-spacing:6px;
-	font-size:30px;
-	text-transform:uppercase;
-}
+
 .heading-2{
 	padding:2%;
 	width:auto;
