--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,12 @@ body{
 	letter-spacing:6px;
 	font-size:50px;
 }
-
+.name2{
+	color:#ffffff;
+	letter-spacing:6px;
+	font-size:30px;
+	text-transform:uppercase;
+}
 .heading-2{
 	padding:2%;
 	width:auto;
